# pLaSDI

./: .gitignore  README.md
data_storage/lithography_4ns/: historyfile_seg0.txt  historyfile_seg1.txt  historyfile_seg10.txt  historyfile_seg100.txt  historyfile_seg101.txt  historyfile_seg102.txt  historyfile_seg103.txt  historyfile_seg104.txt  historyfile_seg105.txt  historyfile_seg106.txt  historyfile_seg107.txt  historyfile_seg108.txt  historyfile_seg109.txt  historyfile_seg11.txt  historyfile_seg110.txt  historyfile_seg111.txt  historyfile_seg112.txt  historyfile_seg113.txt  historyfile_seg114.txt  historyfile_seg115.txt  historyfile_seg116.txt  historyfile_seg117.txt  historyfile_seg118.txt  historyfile_seg119.txt  historyfile_seg12.txt  historyfile_seg120.txt  historyfile_seg121.txt  historyfile_seg122.txt  historyfile_seg123.txt  historyfile_seg124.txt  historyfile_seg125.txt  historyfile_seg126.txt  historyfile_seg127.txt  historyfile_seg128.txt  historyfile_seg129.txt  historyfile_seg13.txt  historyfile_seg130.txt  historyfile_seg131.txt  (+147 more)
pLaSDI_260615/: config.py  conftest.py  evaluate.py  name_bound.txt  name_total.txt  noise_evaluate.py  pyproject.toml  rollout.py  save_outputs.py  train.py  view_truth.py
pLaSDI_260615/documents/: README.md
pLaSDI_260615/src/: __init__.py  atomic_physics.py  autoencoder.py  checkpoint_manager.py  common.py  data_utils.py  fd.py  scaling.py  sindy_utils.py  sindyc.py  sindyc_adaptive.py  train_utils.py  trainer.py  visualization.py
pLaSDI_260615/tests/: conftest.py  test_physics.py  test_scaling.py  test_sindy.py
(+2 files in other folders)
