[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lasdic"
version = "0.1.0"
description = "Latent-Space Dynamics Identification with Control for atomic population dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8.4",
    "h5py",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]
